Fix color contrast issues

--- a/src/components/activity-introduction/footer.scss
+++ b/src/components/activity-introduction/footer.scss
@@ -2,12 +2,15 @@
 
 .footer {
   width: $content-width;
+  box-sizing: border-box;
   font-size: 13px;
-  color: var(--theme-primary-text-color);
+  color: white;
+  background-color: $cc-teal-dark1;
+  padding: 20px 20px 40px;
   margin: 10px 0 10px 0;
 
   a:link, a:visited, a:hover, a:active {
-    color: var(--theme-primary-text-color);
+    color: white;
   }
 
   .footer-logo-container {
