--- a/src/components/activity-page/activity-page-content.scss
+++ b/src/components/activity-page/activity-page-content.scss
@@ -3,7 +3,7 @@
 .page-content {
   width: $content-width;
   box-sizing: border-box;
-  background-color: rgba(255,255,255,0.95);
+  background-color: $light-background-color;
   padding: 20px;
   margin: 1px 0 1px 0;
 
@@ -13,7 +13,7 @@
 
   .name {
     font-size: 24px;
-    font-weight: bold;;
+    font-weight: bold;
     max-width: 900px;
     color: var(--theme-secondary-color);
   }
