--- a/src/components/activity-page/embeddable.scss
+++ b/src/components/activity-page/embeddable.scss
@@ -20,6 +20,6 @@
     align-items: center;
     padding: 0 0 0 10px;
     color: white;
-    background-color: var(--theme-primary-color);
+    background-color: $cc-teal-dark1;
   }
 }
